- project is now not modular (removed module-info.java) - removed jlink + moduleplugin - upgraded to java 25 - upgraded to gradle 9.0.1