@@ -1,9 +1,7 @@
 plugins {
     java
     application
-    id("org.javamodularity.moduleplugin") version "1.8.15"
-    id("org.openjfx.javafxplugin") version "0.0.13"
-    id("org.beryx.jlink") version "2.25.0"
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "de.hallo5000"
@@ -15,7 +13,7 @@ repositories {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(23)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -23,20 +21,15 @@ tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
 }
 
+tasks.withType<JavaExec>().configureEach {//add this to tests if using them
+    jvmArgs("--enable-native-access=javafx.graphics")
+}
+
 application {
-    mainModule.set("de.hallo5000.chemequilibriumsimulator")
     mainClass.set("de.hallo5000.chemequilibriumsimulator.MainApplication")
 }
 
 javafx {
     version = "25.0.2"
     modules = listOf("javafx.controls", "javafx.fxml")
-}
-
-jlink {
-    imageZip.set(layout.buildDirectory.file("/distributions/app-${javafx.platform.classifier}.zip"))
-    options.set(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"))
-    launcher {
-        name = "app"
-    }
 }
